--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,35 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
+.my-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1em;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.my-header,
+.main-content, 
+.my-footer,
+aside {
+  padding: 20px;
+}
+
+.main-content {
+  flex: 1
+}
+
+aside {
+  flex-basis: 250px;
+  background-color: #61dafb4f;
+}
+
+.my-footer {
+  background-color: #282c34;
 }
